--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
-        <title>React App</title>
+        <title>Make Let Not Var</title>
     </head>
     <body>
         <noscript>
